...
                            .font(.subheadline)
                            .foregroundStyle(.secondary)
                    }

                    VStack(spacing: UIConstants.Spacing.section) {
                        TextField(
                            "Email",
                            text: APIConfig.mode != "DEMO" ? $email : .constant("tester@example.com"),
                        )
                        .textFieldStyle(.roundedBorder)
                        .textContentType(.emailAddress)
                        #if os(iOS)
                            .autocapitalization(.none)
                            .keyboardType(.emailAddress)
                        #endif
                            .frame(width: 280, height: 45)
                            .disabled(shouldDisableInput)

                        SecureField(
                            "Password",
                            text: APIConfig.mode != "DEMO" ? $password : .constant("password123"),
                        )
                        .textFieldStyle(.roundedBorder)
                        .textContentType(.password)
                        .frame(width: 280, height: 45)
                        .disabled(shouldDisableInput)
...
